[package]
name = "rust-http-server-80"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
        "web_pages",
        "api", "webcomponents",
	"webpages"
]
resolver = "2"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["tls12"] }
rustls-pemfile = "2.1"
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs"] }

web_pages = {path = "web_pages"}
webpages = {path="webpages"}
api = {path="api"}

deadpool-postgres = {version="0.10",features=["serde"]}
tokio-postgres={version="0.7",features=["with-chrono-0_4","runtime"]}
