[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres = {version="0.7",features=["with-uuid-1","with-serde_json-1","runtime","with-chrono-0_4"]}
tokio = {version="1",features=["macros","rt-multi-thread"]}
deadpool-postgres = {version="0.10",features=["serde"]}
serde = {version="1.0",features=["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
